# EL

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.smoke  Makefile  README.md  install.sh  pyproject.toml
.claude/skills/el-ai-brief/: SKILL.md
.claude/skills/el-demo/: SKILL.md
.claude/skills/el-red-review/: SKILL.md
docs/: JUDGES.md  SRL-2018-shakedown.md  accuracy_report.md  agent_execution_logs.md  architecture.mmd  capa-rules.md  capability-gap-analysis.md  cold-run.md  demo_video.md  enhancement_proposals.md  evidence_datasets.md  father_rootkit_enhancement_verification.md  find_evil_readiness.md  protocol-sift.md  quality_criteria.txt  sans_sift_tools.md  stage_one_qualification.md  state-machine.md  uac_integration_complete.md  uac_integration_proposal.md  web-view-design.md
el/: audit.py  bundle.py  bundle_synth.py  case_metadata.py  case_template.py  cli.py  knowledge.py  llm_defer.py  provisioning.py  seal.py  self_correction.py  tooling.py
el/agents/: android_forensicator.py  artifact_recovery.py  base.py  browser_forensicator.py  bulk_extractor_features_agent.py  cloud_forensicator.py  container_forensicator.py  correlator.py  credential_analyst.py  dftimewolf_dispatcher.py  disk_forensicator.py  email_forensicator.py  endpoint_analyst.py  execution_corroborator.py  ios_forensicator.py  k8s_audit_analyst.py  lateral_movement_analyst.py  linux_forensicator.py  live_response_collector.py  log_analyst.py  log_corpus.py  macos_forensicator.py  malware_triage.py  memory_forensicator.py  network_analyst.py  powershell_analyst.py  rdp_brute_force.py  recovery.py  red_reviewer.py  sigma_analyst.py  threat_hunter.py  timeline_synthesist.py  triage.py  user_activity.py  windows_artifact.py
el/challengers/: rules.py
el/evidence/: graph.py  intake.py  ledger.py
el/intel/: ach.py  actor_playbooks.py  admiralty.py  attack_capacities.py  attack_map.py  attack_probes.py  attack_tactics.py  hypotheses.py  kac.py  long_tail.py  malware_families.py  pair_detection.py
el/orchestrator/: coordinator.py  states.py
el/reporting/: ach_matrix.py  activity_thread.py  actor_match.py  combined.py  combined_executive.py  combined_executive_ai.py  combined_html.py  diamond.py  execution_log.py  executive.py  executive_ai.py  executive_pdf.py  glossary.py  graph_export.py  html.py  kac.py  narrative.py  recommendations.py  render.py  stix.py
el/schemas/: finding.py
el/skills/: _iana_tlds.py  _osac_stoplist.py  _sqlite.py  _yellow_list_inn.py  aleapp.py  android_artifacts.py  android_triage.py  apfs.py  apple_archive.py  apple_mail.py  auditd.py  azure_activity.py  azure_signin.py  azurehound_triage.py  bam_dam.py  browser.py  browser_credentials.py  bulk_extractor.py  bulk_extractor_features.py  capa.py  capability_access.py  cape_client.py  car_import.py  chromium_leveldb.py  cisco_asa.py  cloudtrail.py  credential_triage.py  cross_cloud_mirror.py  csv_time_window.py  detect_it_easy.py  dftimewolf_bundle.py  disk_anomaly.py  disk_convert.py  dislocker.py  dns_enrich.py  dns_enrichment.py  dotfile_anomaly.py  dump_analysis.py  ecar.py  email_headers.py  (+110 more)
el/skills/rules/: hiddencobra_uscert.yar
provisioning/: apt-packages.txt  optional-tools.txt
provisioning/snapshots/: diff-20260428T070322Z.txt  dpkg-pre-20260428T070322Z.txt  host-pre-20260428T070322Z.txt  opt-post-20260428T070322Z.txt  pip-freeze-post-20260428T070322Z.txt  vol3-pre-20260428T070322Z.txt
rules/sigma/: README.md
sample-reports/: README.md  SRL-2018-shakedown.md
sample-reports/execution-logs/: README.md
sample-reports/execution-logs/m57-jean/: README.md  execution_log.jsonl  traceability_matrix.md
sample-reports/rocba/: findings.md  recovered_mailbox.md  vss_ost_recovery.md
sample-reports/srl-2015/: exfil_inventory.md  pivot_map.md
sample-reports/srl-2018/: attribution.md  perimeter_from_memory.md  pivot_map.md
scratch/qnap/be_out/: domain.txt  domain_histogram.txt  email.txt  email_domain_histogram.txt  email_histogram.txt  evtx_carved.txt  exif.txt  rfc822.txt  url.txt  url_histogram.txt  url_services.txt
scratch/qnap/be_out/evtx_carved/: evtx_orphan_record
scripts/: gen_lexicon_data.py  opus_red_review.py  record_self_correction_demo.sh
tests/: conftest.py  test_ach.py  test_ach_corpus_golden.py  test_ach_excludes_insufficient.py  test_ach_matrix_and_diamond.py  test_activity_thread.py  test_actor_playbooks.py  test_admiralty.py  test_aleapp.py  test_android_forensicator.py  test_anti_forensic_modifier.py  test_apple_archive.py  test_apple_mail.py  test_artifact_recovery.py  test_atomic_red_team_coverage.py  test_attack_capacities.py  test_attack_coverage_matrix.py  test_attack_map.py  test_attack_tactics.py  test_audit_log.py  test_auditd.py  test_azure_signin.py  test_azurehound_triage.py  test_bam_dam_and_timeline.py  test_browser_credentials.py  test_browser_forensicator.py  test_bulk_extractor_features.py  test_bulk_extractor_scanner_names.py  test_bundle.py  test_c2_score_discrimination.py  test_capa_rules_and_shellcode.py  test_capability_access.py  test_cape_client.py  test_car_import.py  test_carve_only.py  test_case_claude_md.py  test_case_metadata.py  test_chromium_leveldb.py  test_cli_defer_notify.py  test_cli_knowledge_pull_feed.py  (+221 more)
tests/atomic/expectations/: coverage_map.yaml
tests/atomic/fixtures/T1574.006-1/etc/: ld.so.preload
tests/fixtures/: ach_golden.json
