[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "el"
version = "0.1.0"
description = "EL — Edmond Locard. Multi-agent DFIR orchestrator for SANS SIFT."
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Murat Cakir", email = "muratc@tr66.net"},
]
dependencies = [
    "pydantic>=2.6",
    "kuzu>=0.4",
    "typer>=0.12",
    "rich>=13.7",
    "python-ulid>=2.2",
    "volatility3>=2.7",
    "anthropic>=0.39",
    "scapy>=2.5",
    "stix2>=3.0",
    # BAM/DAM parser: SYSTEM-hive binary value walk. MIT licensed.
    "regipy>=5.0",
    # Similarity digests (Roussev/Quates 2012 M57 content-triage): pure-
    # Python ssdeep implementation. LGPL-3.0.
    "ppdeep>=20200505",
    # Perceptual image hashing for steganography-carrier detection
    # (pairs of images visually identical but byte-different). BSD-2-Clause.
    "imagehash>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
el = "el.cli:app"

[tool.setuptools.packages.find]
include = ["el*"]
