[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "el"
version = "0.1.0"
description = "EL — Edmond Locard. Multi-agent DFIR orchestrator for SANS SIFT."
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Murat Cakir", email = "muratc@tr66.net"},
]
dependencies = [
    "pydantic>=2.6",
    "kuzu>=0.4",
    "typer>=0.12",
    "rich>=13.7",
    "python-ulid>=2.2",
    "volatility3>=2.7",
    "anthropic>=0.39",
    "scapy>=2.5",
    "stix2>=3.0",
    # BAM/DAM parser: SYSTEM-hive binary value walk. MIT licensed.
    "regipy>=5.0",
    # Similarity digests (Roussev/Quates 2012 M57 content-triage): pure-
    # Python ssdeep implementation. LGPL-3.0.
    "ppdeep>=20200505",
    # Perceptual image hashing for steganography-carrier detection
    # (pairs of images visually identical but byte-different). BSD-2-Clause.
    "imagehash>=4.3",
    # PE structural deep-dive (imphash + Rich Header + section entropy).
    "pefile>=2024.8",
    # Office document deobfuscation — VBA macros (olevba) + RTF
    # embedded objects (rtfobj). BSD-2-Clause.
    "oletools>=0.60",
    # PDF rendering for the executive (non-expert) report tier.
    # Renders an HTML+CSS document to a paginated PDF so a stakeholder
    # can print, email, or attach the report. BSD-3-Clause.
    "weasyprint>=62",
    # Hindsight — Chromium-family browser forensics (Chrome/Edge/Brave).
    # Apache-2.0. Note: pulls in ccl_chromium_reader as a transitive dep
    # which is GitHub-only; install.sh installs it explicitly.
    "pyhindsight>=2026",
    # MVT (Mobile Verification Toolkit) — mercenary spyware (Pegasus,
    # Predator, Triangulation) IOC matching against iOS/Android extractions.
    # MVT-2.0 license (project-specific permissive). Provides mvt-ios and
    # mvt-android CLI entrypoints.
    "mvt>=2026",
    # Timesketch client + import client (Apache-2.0). Optional Plaso
    # super-timeline upload to a configured Timesketch instance for
    # collaborative analyst review. Opt-in via EL_TIMESKETCH_URL +
    # EL_TIMESKETCH_TOKEN env vars.
    "timesketch-api-client>=20260312",
    "timesketch-import-client>=20260108",
    # OpenCTI + MISP clients for the per-case TI push at coordinator DONE.
    # Both Apache-2.0. Opt-in via EL_OPENCTI_URL+TOKEN / EL_MISP_URL+KEY.
    "pycti>=6.0",
    "pymisp>=2.5",
    # pySigma + multi-SIEM backends. Used by sigma_export.py at coordinator
    # DONE to convert the SIGMA rule pack to per-SIEM query files (SPL,
    # KQL, Lucene). Apache-2.0. The native sigma_engine.py keeps its own
    # in-process EvtxECmd-row evaluator independent of these.
    "pysigma>=1.3",
    "pysigma-backend-splunk>=2.0",
    "pysigma-backend-elasticsearch>=2.0",
    "pysigma-backend-opensearch>=2.0",
    "pysigma-backend-kusto>=1.0",
    # iocsearcher (IMDEA Software Institute, MIT) — broader IOC type
    # coverage than EL's native regex extractor. Augmenting only, not
    # replacing the core extractor: see el/skills/iocsearcher_extras.py
    # for the targeted-types list (cryptocurrencies × 13, Tor onion,
    # CVE refs, social handles × 10, IBAN, phone, Android packages,
    # MITRE ATT&CK T-IDs in report text). Pulls ~15 transitive deps
    # (lxml, pdfminer.six, phonenumbers, langdetect, solders, …) —
    # the cost of breadth on IOC types EL doesn't otherwise extract.
    "iocsearcher>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
# Fuzzy-hash similarity for Layer-3 cross-case malware correlation
# (el/skills/similarity_digest.py degrades gracefully without it).
similarity = [
    "python-tlsh>=4.5",
]

[project.scripts]
el = "el.cli:app"

[tool.setuptools.packages.find]
include = ["el*"]
